<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_white"
        android:id="@+id/relative">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/lin">

            <com.hashtag.firstbetaqa.MyTextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/requestJoinPartner"
                android:textColor="#000000"
                android:layout_marginTop="20dp"/>


            <com.hashtag.firstbetaqa.MyTextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/requestCardContent"
                android:textSize="11sp"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:src="@drawable/profile"
                android:id="@+id/partnerImage"
                android:scaleType="fitXY"
                android:minWidth="75dp"
                android:minHeight="75dp"
                android:layout_marginTop="20dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#F88D1E"
                android:layout_marginTop="20dp">

                <com.hashtag.firstbetaqa.MyEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/partnerName"
                    android:id="@+id/companyName"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:gravity="start"
                    android:inputType="text"
                    android:textSize="13sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
            <com.hashtag.firstbetaqa.MyTextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/partnerCity"
                android:textColorHint="#F99E3F"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="13sp"
                android:gravity="start"
                android:paddingTop="5dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#ffffff"
                android:id="@+id/citySpinner"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.hashtag.firstbetaqa.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/partnerArea"
                        android:textColorHint="#F99E3F"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:textSize="13sp"
                        android:gravity="start"
                        android:paddingTop="5dp"/>

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="#ffffff"
                        android:id="@+id/areaSpinner"/>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#F88D1E"
                android:layout_height="wrap_content">

                <com.hashtag.firstbetaqa.MyEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/webLink"
                    android:id="@+id/wedsiteLink"
                    android:paddingRight="20dp"
                    android:textSize="13sp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:gravity="start"
                    android:paddingBottom="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#F88D1E"
                android:layout_height="wrap_content">

                <com.hashtag.firstbetaqa.MyEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/NumberOfEmployees"
                    android:id="@+id/numberOfEmployees"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:textSize="13sp"
                    android:gravity="start"
                    android:inputType="number"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>

            <com.hashtag.firstbetaqa.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/sectors"
                android:textColorHint="#F99E3F"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="13sp"
                android:gravity="start"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#ffffff"
                android:id="@+id/sectorSpinner"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#F88D1E"
                android:layout_height="wrap_content">

                <com.hashtag.firstbetaqa.MyEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/ManagerName"
                    android:id="@+id/managerName"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:textSize="13sp"
                    android:gravity="start"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#F88D1E"
                android:layout_height="wrap_content">

                <com.hashtag.firstbetaqa.MyEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/jobTitle"
                    android:id="@+id/jobTitle"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:textSize="13sp"
                    android:gravity="start"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#F88D1E"
                android:layout_height="wrap_content">

                <com.hashtag.firstbetaqa.MyEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/managerPhone"
                    android:id="@+id/managerPhone"
                    android:paddingRight="20dp"
                    android:inputType="phone"
                    android:paddingLeft="20dp"
                    android:textSize="13sp"
                    android:gravity="start"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#F88D1E"
                android:layout_height="wrap_content">

                <com.hashtag.firstbetaqa.MyEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/managerEmail"
                    android:id="@+id/managerEmail"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:textSize="13sp"
                    android:gravity="start"
                    android:inputType="textEmailAddress"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#F88D1E"
                android:layout_height="wrap_content">

                <com.hashtag.firstbetaqa.MyEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/requestCardDetails"
                    android:id="@+id/details"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:textSize="13sp"
                    android:gravity="start"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>


        </LinearLayout>



        <com.hashtag.firstbetaqa.CircleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/joinInfo"
            android:background="#C3206C"
            android:textColor="#ffffff"
            android:id="@+id/joinPartnersBtn"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/lin"
            app:spinning_bar_color="#ffffff"
            android:layout_marginTop="20dp"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/progress"
            android:visibility="gone"
            android:background="@drawable/round_green"/>







    </RelativeLayout>

</ScrollView>